crates/strider-analyze/tests/snapshots/v3__aarch64__calls__main.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x7f0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x6:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x860:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "12" -> "9" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x5:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "9" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "14" -> "9" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nx3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v15" [color="#888888", style=dashed];
  "v15" -> "9" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "16" -> "9" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "17" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "9" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x8b0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "20" -> "17" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x3:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "21" -> "17" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x2:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "22" -> "17" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "23" -> "17" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "24" -> "17" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "25" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "17" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x8e0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "28" -> "25" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v29" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v29" [color="#888888", style=dashed];
  "v29" -> "25" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "31" -> "25" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "32" -> "25" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "33" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "25" -> "33" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x910:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "36" -> "33" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "37" -> "33" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x5:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "38" -> "33" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "39" -> "33" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "40" -> "33" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "41" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "33" -> "41" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "42" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "41" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x924:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "44" -> "41" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x7e0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v45" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "33" -> "v45" [color="#888888", style=dashed];
  "v45" -> "41" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "46" -> "41" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "47" -> "41" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "48" -> "41" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "49" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "41" -> "49" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "50" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "52" -> "49" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v53" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "41" -> "v53" [color="#888888", style=dashed];
  "v53" -> "49" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v54" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "41" -> "v54" [color="#888888", style=dashed];
  "v54" -> "49" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "52" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "55" -> "52" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "55" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v58" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "41" -> "v58" [color="#888888", style=dashed];
  "v58" -> "57" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "59" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "60" -> "56" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "60" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "61" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0xfffffffffffffffc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "59" [label="MemPartition[MemPartitionId(6)]", shape=trapezium, fillcolor="#3a1a4a"];
  "41" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "55" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "63" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "63" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "59" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "63" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "55" -> "63" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "65" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v67" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "33" -> "v67" [color="#888888", style=dashed];
  "v67" -> "66" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "65" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "68" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "60" -> "65" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "68" [label="MemPartition[MemPartitionId(5)]", shape=trapezium, fillcolor="#3a1a4a"];
  "33" -> "68" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "66" -> "47" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "69" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "69" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "68" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v70" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v70" -> "69" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "48" -> "69" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "71" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v73" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "25" -> "v73" [color="#888888", style=dashed];
  "v73" -> "72" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "71" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "74" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "60" -> "71" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "74" [label="MemPartition[MemPartitionId(4)]", shape=trapezium, fillcolor="#3a1a4a"];
  "25" -> "74" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "72" -> "39" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "40" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "34" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "75" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "75" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "74" -> "75" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v76" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v76" -> "75" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "40" -> "75" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "77" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "78" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v79" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v79" [color="#888888", style=dashed];
  "v79" -> "78" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "77" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "80" -> "77" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "60" -> "77" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "80" [label="MemPartition[MemPartitionId(3)]", shape=trapezium, fillcolor="#3a1a4a"];
  "17" -> "80" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "78" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "32" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "81" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "81" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "80" -> "81" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v82" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v82" -> "81" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "81" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "83" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "84" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "84" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v85" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v85" [color="#888888", style=dashed];
  "v85" -> "84" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "83" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "86" -> "83" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "60" -> "83" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "86" [label="MemPartition[MemPartitionId(2)]", shape=trapezium, fillcolor="#3a1a4a"];
  "9" -> "86" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "84" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "24" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "87" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "87" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "86" -> "87" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v88" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v88" -> "87" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "87" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "89" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "90" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "90" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v91" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v91" [color="#888888", style=dashed];
  "v91" -> "90" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "89" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "92" -> "89" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "60" -> "89" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "92" [label="MemPartition[MemPartitionId(1)]", shape=trapezium, fillcolor="#3a1a4a"];
  "1" -> "92" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "14" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "90" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "16" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "93" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "93" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "92" -> "93" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v94" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v94" -> "93" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "93" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "7" [label="init\nx3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="init\nx2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nx1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "95" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "95" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "96" -> "95" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v97" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v97" -> "95" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "98" -> "95" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "98" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "96" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "99" -> "96" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v100" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v100" -> "96" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "101" -> "96" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "101" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "99" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "102" -> "99" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v103" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v103" -> "99" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "104" -> "99" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "104" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "102" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "105" -> "102" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "105" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
